Analizador Semántico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COUNT
    TRIM

Grammar

Rule 0     S' -> programa
Rule 1     programa -> bloque
Rule 2     programa -> bloque programa
Rule 3     programa -> comment bloque programa
Rule 4     comment -> COMMENT1
Rule 5     comment -> COMMENT1 NEWLINE
Rule 6     bloque -> sentencia NEWLINE
Rule 7     bloque -> sentencia
Rule 8     bloque -> NEWLINE
Rule 9     sentencia -> print
Rule 10    sentencia -> asignacion
Rule 11    sentencia -> funcion
Rule 12    sentencia -> if
Rule 13    sentencia -> for
Rule 14    asignacion -> VARIABLE ASSIGN expresion SEMICOLON
Rule 15    print -> ECHO datos SEMICOLON
Rule 16    print -> ECHO SEMICOLON
Rule 17    print -> ECHO argumentos SEMICOLON
Rule 18    if -> IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
Rule 19    if -> IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
Rule 20    for -> FOR LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN
Rule 21    expresion -> argumentos
Rule 22    expresion -> FUNCTION_NAME LPAREN argumentos RPAREN
Rule 23    expresion -> operacionAritmetica
Rule 24    expresion -> operacionRelacional
Rule 25    expresion -> readline
Rule 26    expresion -> arregloIndexado
Rule 27    expresion -> arregloDeclarado
Rule 28    expresion -> operacionLogica
Rule 29    expresion -> operadorLogico
Rule 30    expresion -> ASSIGN_ADD
Rule 31    expresion -> ASSIGN_SUB
Rule 32    argumentos -> datos
Rule 33    argumentos -> datos conector argumentos
Rule 34    conector -> COMMA
Rule 35    conector -> PERIOD
Rule 36    datos -> d_numericos
Rule 37    datos -> d_strings
Rule 38    datos -> d_booleanos
Rule 39    datos -> VARIABLE
Rule 40    d_numericos -> NUMBER
Rule 41    d_numericos -> FLOAT
Rule 42    d_strings -> STRING
Rule 43    d_booleanos -> BOOLEAN
Rule 44    operacionAritmetica -> datos operadorAritmetico datos
Rule 45    operacionAritmetica -> datos operadorAritmetico operacionAritmetica
Rule 46    operacionModificadoras -> VARIABLE INCREMENT
Rule 47    operacionModificadoras -> VARIABLE DECREMENT
Rule 48    operacionLogica -> operacionRelacional operadorLogico operacionRelacional
Rule 49    operacionLogica -> operacionRelacional operadorLogico operacionLogica
Rule 50    operacionRelacional -> datos operadorRelacional datos
Rule 51    operadorAritmetico -> PLUS
Rule 52    operadorAritmetico -> MINUS
Rule 53    operadorAritmetico -> TIMES
Rule 54    operadorAritmetico -> DIVIDE
Rule 55    operadorAritmetico -> MOD
Rule 56    operadorLogico -> LOGICAL_AND
Rule 57    operadorLogico -> LOGICAL_OR
Rule 58    operadorLogico -> LOGICAL_NOT
Rule 59    operadorRelacional -> GREATER
Rule 60    operadorRelacional -> LESS
Rule 61    operadorRelacional -> EQUALS
Rule 62    operadorRelacional -> DIFFERENT
Rule 63    operadorRelacional -> GREATER_EQUALS
Rule 64    operadorRelacional -> LESS_EQUALS
Rule 65    arregloDeclarado -> LCOR NEWLINE cuerpoArregloDeclarado NEWLINE RCOR
Rule 66    cuerpoArregloDeclarado -> datos ASSIGNATION datos
Rule 67    cuerpoArregloDeclarado -> datos ASSIGNATION datos COMMA NEWLINE cuerpoArregloDeclarado
Rule 68    arregloIndexado -> LCOR datos_comma RCOR
Rule 69    funcion -> FUNCTION FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY
Rule 70    datos_comma -> datos
Rule 71    datos_comma -> datos COMMA datos_comma
Rule 72    cuerpoFuncion -> programa RETURN expresion SEMICOLON
Rule 73    cuerpoFuncion -> programa
Rule 74    cuerpoFuncion -> RETURN expresion SEMICOLON
Rule 75    readline -> READLINE LPAREN STRING RPAREN

Terminals, with rules where they appear

ASSIGN               : 14
ASSIGNATION          : 20 66 67
ASSIGN_ADD           : 30
ASSIGN_SUB           : 31
BOOLEAN              : 43
BREAK                : 
COMMA                : 34 67 71
COMMENT1             : 4 5
COUNT                : 
DECREMENT            : 47
DIFFERENT            : 62
DIVIDE               : 54
ECHO                 : 15 16 17
ELSE                 : 19
EQUALS               : 61
FLOAT                : 41
FOR                  : 20
FUNCTION             : 69
FUNCTION_NAME        : 22 69
GREATER              : 59
GREATER_EQUALS       : 63
IF                   : 18 19
INCREMENT            : 46
LCOR                 : 65 68
LESS                 : 60
LESS_EQUALS          : 64
LKEY                 : 18 19 19 69
LOGICAL_AND          : 56
LOGICAL_NOT          : 58
LOGICAL_OR           : 57
LPAREN               : 18 19 20 22 69 75
MINUS                : 52
MOD                  : 55
NEWLINE              : 5 6 8 18 19 19 19 65 65 67 69
NUMBER               : 40
PERIOD               : 35
PLUS                 : 51
RCOR                 : 65 68
READLINE             : 75
RETURN               : 72 74
RKEY                 : 18 19 19 69
RPAREN               : 18 19 20 22 69 75
SEMICOLON            : 14 15 16 17 20 20 72 74
STRING               : 42 75
TIMES                : 53
TRIM                 : 
VARIABLE             : 14 20 20 39 46 47
error                : 

Nonterminals, with rules where they appear

argumentos           : 17 21 22 33
arregloDeclarado     : 27
arregloIndexado      : 26
asignacion           : 10
bloque               : 1 2 3
comment              : 3
conector             : 33
cuerpoArregloDeclarado : 65 67
cuerpoFuncion        : 69
d_booleanos          : 38
d_numericos          : 36
d_strings            : 37
datos                : 15 20 32 33 44 44 45 50 50 66 66 67 67 70 71
datos_comma          : 68 69 71
expresion            : 14 72 74
for                  : 13
funcion              : 11
if                   : 12
operacionAritmetica  : 23 45
operacionLogica      : 28 49
operacionModificadoras : 20
operacionRelacional  : 18 19 24 48 48 49
operadorAritmetico   : 44 45
operadorLogico       : 29 48 49
operadorRelacional   : 20 50
print                : 9
programa             : 2 3 18 19 19 20 72 73 0
readline             : 25
sentencia            : 6 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . bloque
    (2) programa -> . bloque programa
    (3) programa -> . comment bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (4) comment -> . COMMENT1
    (5) comment -> . COMMENT1 NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . funcion
    (12) sentencia -> . if
    (13) sentencia -> . for
    (15) print -> . ECHO datos SEMICOLON
    (16) print -> . ECHO SEMICOLON
    (17) print -> . ECHO argumentos SEMICOLON
    (14) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (69) funcion -> . FUNCTION FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (18) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (19) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (20) for -> . FOR LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN

    NEWLINE         shift and go to state 5
    COMMENT1        shift and go to state 6
    ECHO            shift and go to state 12
    VARIABLE        shift and go to state 13
    FUNCTION        shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16

    programa                       shift and go to state 1
    bloque                         shift and go to state 2
    comment                        shift and go to state 3
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    funcion                        shift and go to state 9
    if                             shift and go to state 10
    for                            shift and go to state 11

state 1

    (0) S' -> programa .



state 2

    (1) programa -> bloque .
    (2) programa -> bloque . programa
    (1) programa -> . bloque
    (2) programa -> . bloque programa
    (3) programa -> . comment bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (4) comment -> . COMMENT1
    (5) comment -> . COMMENT1 NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . funcion
    (12) sentencia -> . if
    (13) sentencia -> . for
    (15) print -> . ECHO datos SEMICOLON
    (16) print -> . ECHO SEMICOLON
    (17) print -> . ECHO argumentos SEMICOLON
    (14) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (69) funcion -> . FUNCTION FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (18) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (19) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (20) for -> . FOR LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN

    $end            reduce using rule 1 (programa -> bloque .)
    SEMICOLON       reduce using rule 1 (programa -> bloque .)
    RKEY            reduce using rule 1 (programa -> bloque .)
    RETURN          reduce using rule 1 (programa -> bloque .)
    NEWLINE         shift and go to state 5
    COMMENT1        shift and go to state 6
    ECHO            shift and go to state 12
    VARIABLE        shift and go to state 13
    FUNCTION        shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16

    bloque                         shift and go to state 2
    programa                       shift and go to state 17
    comment                        shift and go to state 3
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    funcion                        shift and go to state 9
    if                             shift and go to state 10
    for                            shift and go to state 11

state 3

    (3) programa -> comment . bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . funcion
    (12) sentencia -> . if
    (13) sentencia -> . for
    (15) print -> . ECHO datos SEMICOLON
    (16) print -> . ECHO SEMICOLON
    (17) print -> . ECHO argumentos SEMICOLON
    (14) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (69) funcion -> . FUNCTION FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (18) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (19) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (20) for -> . FOR LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN

    NEWLINE         shift and go to state 5
    ECHO            shift and go to state 12
    VARIABLE        shift and go to state 13
    FUNCTION        shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16

    bloque                         shift and go to state 18
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    funcion                        shift and go to state 9
    if                             shift and go to state 10
    for                            shift and go to state 11

state 4

    (6) bloque -> sentencia . NEWLINE
    (7) bloque -> sentencia .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 19
    COMMENT1        reduce using rule 7 (bloque -> sentencia .)
    ECHO            reduce using rule 7 (bloque -> sentencia .)
    VARIABLE        reduce using rule 7 (bloque -> sentencia .)
    FUNCTION        reduce using rule 7 (bloque -> sentencia .)
    IF              reduce using rule 7 (bloque -> sentencia .)
    FOR             reduce using rule 7 (bloque -> sentencia .)
    $end            reduce using rule 7 (bloque -> sentencia .)
    SEMICOLON       reduce using rule 7 (bloque -> sentencia .)
    RKEY            reduce using rule 7 (bloque -> sentencia .)
    RETURN          reduce using rule 7 (bloque -> sentencia .)

  ! NEWLINE         [ reduce using rule 7 (bloque -> sentencia .) ]


state 5

    (8) bloque -> NEWLINE .

    NEWLINE         reduce using rule 8 (bloque -> NEWLINE .)
    COMMENT1        reduce using rule 8 (bloque -> NEWLINE .)
    ECHO            reduce using rule 8 (bloque -> NEWLINE .)
    VARIABLE        reduce using rule 8 (bloque -> NEWLINE .)
    FUNCTION        reduce using rule 8 (bloque -> NEWLINE .)
    IF              reduce using rule 8 (bloque -> NEWLINE .)
    FOR             reduce using rule 8 (bloque -> NEWLINE .)
    $end            reduce using rule 8 (bloque -> NEWLINE .)
    SEMICOLON       reduce using rule 8 (bloque -> NEWLINE .)
    RKEY            reduce using rule 8 (bloque -> NEWLINE .)
    RETURN          reduce using rule 8 (bloque -> NEWLINE .)


state 6

    (4) comment -> COMMENT1 .
    (5) comment -> COMMENT1 . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    ECHO            reduce using rule 4 (comment -> COMMENT1 .)
    VARIABLE        reduce using rule 4 (comment -> COMMENT1 .)
    FUNCTION        reduce using rule 4 (comment -> COMMENT1 .)
    IF              reduce using rule 4 (comment -> COMMENT1 .)
    FOR             reduce using rule 4 (comment -> COMMENT1 .)
    NEWLINE         shift and go to state 20

  ! NEWLINE         [ reduce using rule 4 (comment -> COMMENT1 .) ]


state 7

    (9) sentencia -> print .

    NEWLINE         reduce using rule 9 (sentencia -> print .)
    COMMENT1        reduce using rule 9 (sentencia -> print .)
    ECHO            reduce using rule 9 (sentencia -> print .)
    VARIABLE        reduce using rule 9 (sentencia -> print .)
    FUNCTION        reduce using rule 9 (sentencia -> print .)
    IF              reduce using rule 9 (sentencia -> print .)
    FOR             reduce using rule 9 (sentencia -> print .)
    $end            reduce using rule 9 (sentencia -> print .)
    SEMICOLON       reduce using rule 9 (sentencia -> print .)
    RKEY            reduce using rule 9 (sentencia -> print .)
    RETURN          reduce using rule 9 (sentencia -> print .)


state 8

    (10) sentencia -> asignacion .

    NEWLINE         reduce using rule 10 (sentencia -> asignacion .)
    COMMENT1        reduce using rule 10 (sentencia -> asignacion .)
    ECHO            reduce using rule 10 (sentencia -> asignacion .)
    VARIABLE        reduce using rule 10 (sentencia -> asignacion .)
    FUNCTION        reduce using rule 10 (sentencia -> asignacion .)
    IF              reduce using rule 10 (sentencia -> asignacion .)
    FOR             reduce using rule 10 (sentencia -> asignacion .)
    $end            reduce using rule 10 (sentencia -> asignacion .)
    SEMICOLON       reduce using rule 10 (sentencia -> asignacion .)
    RKEY            reduce using rule 10 (sentencia -> asignacion .)
    RETURN          reduce using rule 10 (sentencia -> asignacion .)


state 9

    (11) sentencia -> funcion .

    NEWLINE         reduce using rule 11 (sentencia -> funcion .)
    COMMENT1        reduce using rule 11 (sentencia -> funcion .)
    ECHO            reduce using rule 11 (sentencia -> funcion .)
    VARIABLE        reduce using rule 11 (sentencia -> funcion .)
    FUNCTION        reduce using rule 11 (sentencia -> funcion .)
    IF              reduce using rule 11 (sentencia -> funcion .)
    FOR             reduce using rule 11 (sentencia -> funcion .)
    $end            reduce using rule 11 (sentencia -> funcion .)
    SEMICOLON       reduce using rule 11 (sentencia -> funcion .)
    RKEY            reduce using rule 11 (sentencia -> funcion .)
    RETURN          reduce using rule 11 (sentencia -> funcion .)


state 10

    (12) sentencia -> if .

    NEWLINE         reduce using rule 12 (sentencia -> if .)
    COMMENT1        reduce using rule 12 (sentencia -> if .)
    ECHO            reduce using rule 12 (sentencia -> if .)
    VARIABLE        reduce using rule 12 (sentencia -> if .)
    FUNCTION        reduce using rule 12 (sentencia -> if .)
    IF              reduce using rule 12 (sentencia -> if .)
    FOR             reduce using rule 12 (sentencia -> if .)
    $end            reduce using rule 12 (sentencia -> if .)
    SEMICOLON       reduce using rule 12 (sentencia -> if .)
    RKEY            reduce using rule 12 (sentencia -> if .)
    RETURN          reduce using rule 12 (sentencia -> if .)


state 11

    (13) sentencia -> for .

    NEWLINE         reduce using rule 13 (sentencia -> for .)
    COMMENT1        reduce using rule 13 (sentencia -> for .)
    ECHO            reduce using rule 13 (sentencia -> for .)
    VARIABLE        reduce using rule 13 (sentencia -> for .)
    FUNCTION        reduce using rule 13 (sentencia -> for .)
    IF              reduce using rule 13 (sentencia -> for .)
    FOR             reduce using rule 13 (sentencia -> for .)
    $end            reduce using rule 13 (sentencia -> for .)
    SEMICOLON       reduce using rule 13 (sentencia -> for .)
    RKEY            reduce using rule 13 (sentencia -> for .)
    RETURN          reduce using rule 13 (sentencia -> for .)


state 12

    (15) print -> ECHO . datos SEMICOLON
    (16) print -> ECHO . SEMICOLON
    (17) print -> ECHO . argumentos SEMICOLON
    (36) datos -> . d_numericos
    (37) datos -> . d_strings
    (38) datos -> . d_booleanos
    (39) datos -> . VARIABLE
    (32) argumentos -> . datos
    (33) argumentos -> . datos conector argumentos
    (40) d_numericos -> . NUMBER
    (41) d_numericos -> . FLOAT
    (42) d_strings -> . STRING
    (43) d_booleanos -> . BOOLEAN

    SEMICOLON       shift and go to state 22
    VARIABLE        shift and go to state 27
    NUMBER          shift and go to state 28
    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    BOOLEAN         shift and go to state 31

    datos                          shift and go to state 21
    argumentos                     shift and go to state 23
    d_numericos                    shift and go to state 24
    d_strings                      shift and go to state 25
    d_booleanos                    shift and go to state 26

state 13

    (14) asignacion -> VARIABLE . ASSIGN expresion SEMICOLON

    ASSIGN          shift and go to state 32


state 14

    (69) funcion -> FUNCTION . FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY

    FUNCTION_NAME   shift and go to state 33


state 15

    (18) if -> IF . LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (19) if -> IF . LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE

    LPAREN          shift and go to state 34


state 16

    (20) for -> FOR . LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN

    LPAREN          shift and go to state 35


state 17

    (2) programa -> bloque programa .

    $end            reduce using rule 2 (programa -> bloque programa .)
    SEMICOLON       reduce using rule 2 (programa -> bloque programa .)
    RKEY            reduce using rule 2 (programa -> bloque programa .)
    RETURN          reduce using rule 2 (programa -> bloque programa .)


state 18

    (3) programa -> comment bloque . programa
    (1) programa -> . bloque
    (2) programa -> . bloque programa
    (3) programa -> . comment bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (4) comment -> . COMMENT1
    (5) comment -> . COMMENT1 NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . funcion
    (12) sentencia -> . if
    (13) sentencia -> . for
    (15) print -> . ECHO datos SEMICOLON
    (16) print -> . ECHO SEMICOLON
    (17) print -> . ECHO argumentos SEMICOLON
    (14) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (69) funcion -> . FUNCTION FUNCTION_NAME LPAREN datos_comma RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (18) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (19) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (20) for -> . FOR LPAREN VARIABLE ASSIGNATION programa SEMICOLON VARIABLE operadorRelacional datos SEMICOLON operacionModificadoras RPAREN

    NEWLINE         shift and go to state 5
    COMMENT1        shift and go to state 6
    ECHO            shift and go to state 12
    VARIABLE        shift and go to state 13
    FUNCTION        shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16

    comment                        shift and go to state 3
    bloque                         shift and go to state 2
    programa                       shift and go to state 36
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    funcion                        shift and go to state 9
    if                             shift and go to state 10
    for                            shift and go to state 11

state 19

    (6) bloque -> sentencia NEWLINE .

    NEWLINE         reduce using rule 6 (bloque -> sentencia NEWLINE .)
    COMMENT1        reduce using rule 6 (bloque -> sentencia NEWLINE .)
    ECHO            reduce using rule 6 (bloque -> sentencia NEWLINE .)
    VARIABLE        reduce using rule 6 (bloque -> sentencia NEWLINE .)
    FUNCTION        reduce using rule 6 (bloque -> sentencia NEWLINE .)
    IF              reduce using rule 6 (bloque -> sentencia NEWLINE .)
    FOR             reduce using rule 6 (bloque -> sentencia NEWLINE .)
    $end            reduce using rule 6 (bloque -> sentencia NEWLINE .)
    SEMICOLON       reduce using rule 6 (bloque -> sentencia NEWLINE .)
    RKEY            reduce using rule 6 (bloque -> sentencia NEWLINE .)
    RETURN          reduce using rule 6 (bloque -> sentencia NEWLINE .)


state 20

    (5) comment -> COMMENT1 NEWLINE .

    NEWLINE         reduce using rule 5 (comment -> COMMENT1 NEWLINE .)
    ECHO            reduce using rule 5 (comment -> COMMENT1 NEWLINE .)
    VARIABLE        reduce using rule 5 (comment -> COMMENT1 NEWLINE .)
    FUNCTION        reduce using rule 5 (comment -> COMMENT1 NEWLINE .)
    IF              reduce using rule 5 (comment -> COMMENT1 NEWLINE .)
    FOR             reduce using rule 5 (comment -> COMMENT1 NEWLINE .)


state 21

    (15) print -> ECHO datos . SEMICOLON
    (32) argumentos -> datos .
    (33) argumentos -> datos . conector argumentos
    (34) conector -> . COMMA
    (35) conector -> . PERIOD

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 37
    COMMA           shift and go to state 39
    PERIOD          shift and go to state 40

  ! SEMICOLON       [ reduce using rule 32 (argumentos -> datos .) ]

    conector                       shift and go to state 38

state 22

    (16) print -> ECHO SEMICOLON .

    NEWLINE         reduce using rule 16 (print -> ECHO SEMICOLON .)
    COMMENT1        reduce using rule 16 (print -> ECHO SEMICOLON .)
    ECHO            reduce using rule 16 (print -> ECHO SEMICOLON .)
    VARIABLE        reduce using rule 16 (print -> ECHO SEMICOLON .)
    FUNCTION        reduce using rule 16 (print -> ECHO SEMICOLON .)
    IF              reduce using rule 16 (print -> ECHO SEMICOLON .)
    FOR             reduce using rule 16 (print -> ECHO SEMICOLON .)
    $end            reduce using rule 16 (print -> ECHO SEMICOLON .)
    SEMICOLON       reduce using rule 16 (print -> ECHO SEMICOLON .)
    RKEY            reduce using rule 16 (print -> ECHO SEMICOLON .)
    RETURN          reduce using rule 16 (print -> ECHO SEMICOLON .)


state 23

    (17) print -> ECHO argumentos . SEMICOLON

    SEMICOLON       shift and go to state 41


state 24

    (36) datos -> d_numericos .

    SEMICOLON       reduce using rule 36 (datos -> d_numericos .)
    COMMA           reduce using rule 36 (datos -> d_numericos .)
    PERIOD          reduce using rule 36 (datos -> d_numericos .)
    PLUS            reduce using rule 36 (datos -> d_numericos .)
    MINUS           reduce using rule 36 (datos -> d_numericos .)
    TIMES           reduce using rule 36 (datos -> d_numericos .)
    DIVIDE          reduce using rule 36 (datos -> d_numericos .)
    MOD             reduce using rule 36 (datos -> d_numericos .)
    GREATER         reduce using rule 36 (datos -> d_numericos .)
    LESS            reduce using rule 36 (datos -> d_numericos .)
    EQUALS          reduce using rule 36 (datos -> d_numericos .)
    DIFFERENT       reduce using rule 36 (datos -> d_numericos .)
    GREATER_EQUALS  reduce using rule 36 (datos -> d_numericos .)
    LESS_EQUALS     reduce using rule 36 (datos -> d_numericos .)
    RPAREN          reduce using rule 36 (datos -> d_numericos .)
    RCOR            reduce using rule 36 (datos -> d_numericos .)
    LOGICAL_AND     reduce using rule 36 (datos -> d_numericos .)
    LOGICAL_OR      reduce using rule 36 (datos -> d_numericos .)
    LOGICAL_NOT     reduce using rule 36 (datos -> d_numericos .)
    ASSIGNATION     reduce using rule 36 (datos -> d_numericos .)
    NEWLINE         reduce using rule 36 (datos -> d_numericos .)


state 25

    (37) datos -> d_strings .
